--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@next/font": "13.0.7",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
-    "next": "13.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "jquery": "^3.6.2",
+    "mongoose": "^6.8.1",
+    "next": "^13.0.7",
+    "next-auth": "^4.18.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
